07/04 16:23 changed Filer to write -path to -filename in format specified by -format