@@ -3,32 +3,36 @@
 package main
 
 import (
+	"bufio"
 	"fmt"
-	"time"
+	"log"
+	"os"
+	"strconv"
+	"strings"
 )
 
-func pinger(c chan float64) {
-	v := 1.0
-	for i := 0; ; i++ {
-		v += 1
-		c <- v
+func looper(num int64, i int64) string {
+	switch {
+	case i == num:
+		return "Time's up! \n"
+	case i != num:
+		fmt.Println(i + 1)
+		i += 1
+		looper(num, i)
 	}
-}
-
-func printer(c chan float64) {
-	for {
-		msg := <-c
-		fmt.Printf("%g\n", msg)
-		time.Sleep(time.Second * 1)
-	}
+	return ""
 }
 
 func main() {
-	var c chan float64 = make(chan float64)
-
-	go pinger(c)
-	go printer(c)
-
-	var input float64
-	fmt.Scanln(&input)
+	reader := bufio.NewReader(os.Stdin)
+	fmt.Printf("Enter time (seconds): ")
+	text, err := reader.ReadString('\n')
+	if err != nil {
+		log.Fatal(err)
+	}
+	number, err := strconv.ParseInt(strings.TrimSuffix(text, "\n"), 0, 64)
+	if err != nil {
+		log.Fatal(err)
+	}
+	fmt.Print(looper(number, 0))
 }
