@@ -1,1 +1,2 @@
 07/04 16:23 changed Filer to write -path to -filename in format specified by -format
+07/05 3:27 Made Conch into a recursive program; time.sleep not yet implemented
